# HotSwapPII

./: .gitignore  app.py  canadian-dl-generator.py  canadian_dl_validation_data - Copy.csv  canadian_dl_validation_data.csv  pyproject.toml  readme.md  requirements.txt
.streamlit/: config.toml
config/: app_config.py  benchmark_config.py  config copy.py  config.py  entity_config.py  evaluation_config.py  model_config.py
core/: anonymizer.py  detector.py  evaluator.py  recognizers.yaml  result.py
data/: demo_text.txt  evaluation_data.csv  overlapping_entities.txt
data/benchmark_datasets/: 1_original_gretel_ai_conformance_data_500.csv  2_another_gretel_ai_data_500.csv  2_second_gretel_ai_data_500.csv  4_fake_data_with_variance_final.csv  5_enron_data.csv  7_simple_generated_data_500.csv
data/benchmark_results/: 1_original_gretel_ai_conformance_data_500_results.json  2_another_gretel_ai_data_500_results.json  2_second_gretel_ai_data_500_results.json  3_simple_generated_data_500_results.json  4_fake_data_with_variance_final_results.json  5_enron_data_results.json  6_fake_data_with_variance_final_results.json  7_simple_generated_data_500_results.json  8_enron_data_results.json
models/: custom_recognizers.py  gliner_engine.py  model_factory.py  spacy_engine.py  transformers_engine.py
ui/: __init__.py  benchmarks_panel.py  custom_pipeline_panel.py  evaluation_panel.py  input_panel.py  model_comparison_panel.py  results_panel.py  sidebar.py
utils/: data_processing.py  metrics.py  synthetic_data.py  visualization.py
